# slovak-taxonomy-for-inat

./: .gitignore  README.md  VernacularNames-slovak-dec.csv  VernacularNames-slovak-nov.csv  add_synonyms_to_problematic_taxa_using_gbif.py  extract_allowed_inat_taxon_ids.py  flag_problematic_common_names.py  plot_number_of_vernacular_names_by_country.py  prepare_dataset_for_chrome_extension.py  process-checklist-of-lepidoptera-recorded-in-Slovakia-2022.py  process-slovenske-mena-hmyzu.py  pyproject.toml  run.py  slovenske-mena-hmyzu.txt  taxa-checklist-of-lepidoptera-recorded-in-Slovakia-2022.json  taxa-slovenske-mena-hmyzu.csv  taxa-slovenske-mena-hmyzu.json
data-sources/checklist-of-lepidoptera-recorded-in-Slovakia-2022/: extract_taxa.py  raw_text.txt  taxa.csv  taxa.json
data-sources/slovenske-botanicke-menoslovie-2024/: allowed_inat_taxon_ids.json  analyse_auto_added_names.py  attribute_existing_names.py  detect_multiple_added_names_per_taxon.py  duplicate_sk_names_in_sbm.csv  existing_names.csv  existing_names_covered.csv  existing_names_not_covered.csv  extract_taxa.py  filter_existing_names.py  find_typos_in_common_names.py  (+15 more)
inat-common-name-adder/: README.md  allowed_inat_taxon_ids.json  auto_press_edit_name.js  autoclose_tab_after_adding_common_name.js  autofill_common_name_form.js  autofill_editing_common_name_form.js  find_matching_taxa_without_common_name.js  manifest.json  taxa.json
inat-sk-name-adder/: autoclose_tab_after_adding_name.js  autofill_name_form.js  find_matching_taxa_without_common_name.js  manifest.json  taxa-slovenske-mena-hmyzu.json
(+13 files in other folders)
