[project]
name = "automating-inat-common-name-adding"
version = "0.1.0"
description = ""
authors = [
    {name = "samsucik",email = "ssucik@cisco.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.9,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "black (>=25.9.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
